@@ -10,6 +10,7 @@ v.0.5dev (ongoing development)
  * Build system: Fix xosd detection
  * Reset ccmode on screen clear for NoritakeVFD, tyan driver
  * All drivers: Refactor CGmode enum into lcd.h
+ * hd44780: New (possible faster) screen update algorithm
 
 v0.5.4
  * Update driver includes and LDFLAGS (fixed glk and bayrad binding error)
